httpserver/httpserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver-service
spec:
  type: ClusterIP
  selector:
    app: httpserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
